style(client-controller): improve the code style